--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
+    "@rnmapbox/maps": "^10.1.44",
     "expo": "~54.0.9",
+    "expo-camera": "^17.0.8",
     "expo-constants": "~18.0.9",
+    "expo-gl": "^16.0.7",
     "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
@@ -19,10 +24,13 @@
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.3.0",
     "react": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.4",
-    "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.19.13",
+    "react-native-webview": "^13.16.0",
+    "three": "^0.180.0",
     "uuid": "^13.0.0"
   },
   "private": true
